# 4

./: .gitignore  README.md  docker-compose.yaml
beast/: main.cpp  websocket_session.cpp  websocket_session.hpp
beast-service/: CMakeLists.txt  Dockerfile  http_session.cpp  listener.cpp  shared_state.cpp  websocket_session.cpp  websocket_session.hpp
beast/include/: websocket_session.hpp
beast/src/: websocket_session.cpp
express/: app.js  package-lock.json  package.json
express-service/: Dockerfile  app.js  package-lock.json
express/views/: index.jade
react/: package-lock.json  package.json
react-service/: Dockerfile  main.py  vite.config.js
react-service/src/: App.css  App.jsx  CatalogPage.jsx  FormPage.jsx  HomePage.jsx  ProductPage.jsx  TestPage.jsx
react/src/: App.jsx  CatalogPage.jsx  TestPage.jsx  auth.js  index.css  main.jsx
react/src/components/: Cart.js  Catalog.css  Catalog.jsx  LoginForm.css  LoginForm.jsx  NavBar.css  NavBar.jsx
react/src/hooks/: cart.js  catalog.js  cookie.js  session.js
react/src/routes/: CatalogPage.jsx  HomePage.css  HomePage.jsx
